<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="CometConfig"
        android:title="@string/comet_config"
        app:iconSpaceReserved="false">

        <thoreros.libraries.preference.colorpicker.ColorPickerPreference
            android:title="@string/background_color"
            app:iconSpaceReserved="false"
            app:key="star_bgcolor"
            app:showAlpha="false"
            app:showHex="true"
            app:showPreview="true"
            app:showValue="false"
            app:valueMaxIfHidden="true" />

        <SeekBarPreference
            android:defaultValue="@integer/default_brighness"
            android:key="star_bgbrightness"
            android:max="@integer/ubyte_max"
            android:min="@integer/ubyte_min"
            android:title="@string/background_brightness"
            app:iconSpaceReserved="false"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="star_random_color"
            android:title="@string/random_star_color"
            app:iconSpaceReserved="false" />

        <thoreros.libraries.preference.colorpicker.ColorPickerPreference
            android:title="@string/star_color"
            app:iconSpaceReserved="false"
            app:key="star_color"
            app:showAlpha="false"
            app:showHex="true"
            app:showPreview="true"
            app:showValue="false"
            app:valueMaxIfHidden="true" />

        <thoreros.libraries.preference.palette.PalettePreference
            android:defaultValue="0"
            android:entries="@array/star_palettes_entries"
            android:entryValues="@array/star_palettes_values"
            android:title="@string/star_palette"
            app:entryPreviewThumbnails="@array/star_palettes_thumbs"
            app:iconSpaceReserved="false"
            app:key="star_palette"
            app:showSummary="true"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            android:defaultValue="@integer/default_brighness"
            android:key="star_brightness"
            android:max="@integer/ubyte_max"
            android:min="@integer/ubyte_min"
            android:title="@string/brightness"
            app:iconSpaceReserved="false"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />

        <SeekBarPreference
            android:key="star_probability"
            android:max="@integer/ubyte_max"
            android:min="@integer/ubyte_nonzero_min"
            android:title="@string/new_stars_probability"
            app:iconSpaceReserved="false"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />

        <SeekBarPreference
            android:key="star_fade_amount"
            android:max="@integer/ubyte_max"
            android:min="@integer/ubyte_nonzero_min"
            android:title="@string/fade"
            app:iconSpaceReserved="false"
            app:showSeekBarValue="true"
            app:updatesContinuously="true" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="star_falling"
            android:title="@string/falling_stars"
            app:iconSpaceReserved="false" />

        <SeekBarPreference
            android:key="star_falling_speed"
            android:max="@integer/max_star_probability"
            android:min="@integer/ubyte_nonzero_min"
            android:title="@string/faling_speed"
            app:iconSpaceReserved="false"
            app:showSeekBarValue="true"
            app:updatesContinuously="true"
            app:dependency="star_falling"/>


    </PreferenceCategory>

</PreferenceScreen>